link do gato arrumado

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <body>
     <div>
-        <img src="../docs/assets/images/graphic-cat.png"> 
+        <img src="graphic-cat.png"> 
         <span>
             <h1>Graphic Design is my Passion.</h1>
         </span>
